--- a/文件/大学/贝京连河大雪.md
+++ b/文件/大学/贝京连河大雪.md
@@ -1,6 +1,6 @@
 # 北京联合大学
 
-> 数据来源：匿名 + 匿名 + 匿名
+> 数据来源：匿名 + 匿名 + 匿名 + 匿名
 
 ## Q: 宿舍是上床下桌吗？
 
@@ -10,6 +10,8 @@
 
 - A3: 不是
 
+- A4: 不是
+
 ## Q: 教室和宿舍有没有空调？
 
 - A1: 有
@@ -17,6 +19,8 @@
 - A2: 有
 
 - A3: 有
+
+- A4：有
 
 ## Q: 有独立卫浴吗？没有独立浴室的话，澡堂离宿舍多远？
 
@@ -26,6 +30,8 @@
 
 - A3: 没有，应用文理校区的话大概50米，每天下午三点半至晚上九点半开放
 
+- A4: 没有，北四环校区男生宿舍离澡堂隔着一条街
+
 ## Q: 有早自习、晚自习吗？
 
 - A1: 仅大一有晚自习 一周一次
@@ -33,6 +39,8 @@
 - A2: 生化校区 大一有
 
 - A3: 19届没有
+
+- A4: 大一有晚自习，可以做自己的事情，学习或者画画
 
 ## Q: 有晨跑吗？
 
@@ -42,6 +50,8 @@
 
 - A3: 19届没有
 
+- A4: 21届没有
+
 ## Q: 每学期跑步打卡的要求是多少公里，可以骑车吗？
 
 - A1: 3km\*48 天 可骑车（在配速要求范围内）
@@ -49,6 +59,8 @@
 - A2: 暂无
 
 - A3: 144公里，每次不少于3公里，不能骑车
+
+- A4：根据最新修订的第二课堂指导方案，每天3km为合格标准 一个月内达标20天以上5分体育积分，达标11-20天3分，11天以下不计分
 
 ## Q: 寒暑假放多久，每年小学期有多长？
 
@@ -66,6 +78,8 @@
 
 - A3: 可以点，应用文理200米左右，需要到校门口拿
 
+- A4: 可以点，北四环校区男生宿舍到门口100米左右
+
 ## Q: 学校交通便利吗，有地铁吗，在市区吗，不在的话进城要多久？
 
 - A1: 视校区而定 北京联合大学校区遍布北京 从北六环到南六环均有校区
@@ -73,6 +87,8 @@
 - A2: 有地铁，在市区
 
 - A3: 应用文理校区出门50米地铁西土城站，位于海淀中心去哪儿都非常方便
+
+- A4：北京联合大学有很多校区，北四环校区位于北四环东路97号，周边有公交车站，地铁 惠新西街北口站 距离学校1.3km
 
 ## Q: 宿舍楼有洗衣机吗？
 
@@ -82,6 +98,9 @@
 
 - A3: 应用文理校区一层宿舍楼一台，洗一次大约4块，刷校园卡
 
+- A4：北四环校区男生宿舍13号楼除1楼外都有，但是用的人比较多，得靠抢
+
+
 ## Q: 校园网怎么样？
 
 - A1: 除本部外均不可自行办理宽带 全部校区有学校提供的免费热点 速度视所在区域进行不同的 QoS 策略
@@ -89,6 +108,8 @@
 - A2: 一般 限速2mb/s 无有线网 暂不限制流量和收费
 
 - A3: 应用文理学院除周五周六外每晚11点断网，速度5m，只支持两台设备同时登陆，基本干不了什么。但可以一个宿舍办一个全天的100M联通外网，路由器接充电宝的话夜间也不断，一年720。
+
+- A4: 北四环校区校园网通过学生账号登录链接，每个账号可以挂两台设备同时使用，速度还可以，日常使用没有大问题，不收费
 
 ## Q: 每天断电断网吗，几点开始断？
 
@@ -98,6 +119,8 @@
 
 - A3: 11点，早上6点来电。
 
+- A4: 北四环校区11点准时断电，但是不断网
+
 ## Q: 食堂价格贵吗，会吃出异物吗？
 
 - A1: 一般水平 有吃出过异物经历
@@ -105,6 +128,8 @@
 - A2: 一般 偶尔会出现异物
 
 - A3: 应用文理学院，价格适中，也比较干净但是菜色很少。
+
+- A4: 北四环校区，价格还可以，不会吃出异物，推荐大食堂二楼 肥牛烤肉拌饭 14¥ 
 
 ## Q: 洗澡热水供应时间？
 
@@ -114,6 +139,8 @@
 
 - A3: 下午三点半至九点半
 
+- A4： 一般来说洗澡得在10:00以前到澡堂，一般都有热水。
+
 ## Q: 校园内可以骑电瓶车吗，电池在哪能充电？
 
 - A1: 不可
@@ -121,6 +148,8 @@
 - A2: 不可以
 
 - A3: 不可以
+
+- A4: 不可以
 
 ## Q: 宿舍限电情况？
 
@@ -130,6 +159,8 @@
 
 - A3: 100w，接个烧水壶基本就凉了
 
+- A4: 本部 不允许大功率电器 且宿舍有电费 如果用超了会断电 请节约用电
+
 ## Q: 通宵自习有去处吗？
 
 - A1: 无
@@ -137,6 +168,8 @@
 - A2: 宿舍楼内设有自习室
 
 - A3: 应用文理，宿舍楼有通宵自习室
+
+- A4: 北四环校区 图书馆10点关门 宿舍11点以后原则上不允许进出
 
 ## Q: 大一能带电脑吗？
 
@@ -146,6 +179,8 @@
 
 - A3: 应用文理，可以
 
+- A4: 北四环校区 可以
+
 ## Q: 学校里面用什么卡，饭堂怎样消费？
 
 - A1: 学校内使用学校所发的学生卡 食堂刷学生卡消费
@@ -153,6 +188,8 @@
 - A2: 学生卡
 
 - A3: 刷校园卡
+
+- A4： 学生卡，用卡机刷卡消费，充值用支付宝充值。
 
 ## Q: 学校会给学生发银行卡吗？
 
@@ -162,6 +199,8 @@
 
 - A3: 不发，但一定要到北京银行办理一张
 
+- A4：不发，但是需要自己去北京银行办理一张方便接收学校统一发放的费用
+
 ## Q: 学校的超市怎么样？
 
 - A1: 一般水准 可满足大部分基础需求
@@ -169,6 +208,7 @@
 - A2: 还可以。市价水准
 
 - A3: 应用文理，满足基本需求
+- A4: 北四环校区 还可以，主要是方便（学校周围基本上没有便利店）
 
 ## Q: 学校的收发快递政策怎么样？
 
@@ -178,6 +218,8 @@
 
 - A3: 应用文理，校内有定点可以定时收发快递，一天两次
 
+- A4: 北四环校区，有近领宝快递点和快递柜，但是快递到达以后需要分拣等待投递时间比较不确定，投快递柜会经常在北院南院之间来回横跳
+
 ## Q: 学校里面的共享单车数目与种类如何？
 
 - A1: 校区内无共享单车 共享单车全部停放在学校外
@@ -185,6 +227,8 @@
 - A2: 无
 
 - A3: 应用文理，太小了不需要😂
+
+- A4: 北四环校区，学校里没有自行车
 
 ## Q: 现阶段学校的门禁情况如何？
 
@@ -194,6 +238,8 @@
 
 - A3: 应用文理，11点门禁，但基本不会阻拦也不会询问
 
+- A4：北四环，原则上11点，不管什么时候都必须刷脸进校
+
 ## Q: 宿舍晚上查寝吗，封寝吗，晚归能回去吗？
 
 - A1: 22:30 后视为晚归 需登记并查验身份后才可归寝
@@ -202,10 +248,13 @@
 
 - A3: 应用文理，可以
 
+- A4: 北四环校区，不怎么查，可以回
+
 ## 自由补充部分
 
 除北京本地学生外不要考 这所大学根本对不起它在非北京市的分数线（基本为一本线上招生） 如果是北京学生还只能报考联大的话 那只能说高中三年不努力的下场就是这样
-
+A4：作为外地来北京的学生，感觉联大比想象中的好，有较好的设施，如食堂，校医院，图书馆，学生服务中心，咖啡厅，体育馆，健身房，洗衣机，以及最近进行的团代会，选民投票等 让我大为震撼，不愧是北京的学校，资源丰富，人文关怀做的好，大部分老师也比较好，有什么问题都可以进行交流，个人还是比较喜欢这所学校的，有归属感！
 ***
 
 校区过多 仅代表生化学院情况
+A4: 仅代表 北京联合大学 北四环校区 （本部）发表个人看法和建议
